--- a/1075. Project Employees I.md
+++ b/1075. Project Employees I.md
@@ -84,7 +84,7 @@ and for the second project is (3 + 2) / 2 = 2.50
 select
     p.project_id,round(avg(e.experience_years),2) as average_years
 from   
-    Project p inner join Employee e
+    Project p join Employee e
 on
     p.employee_id = e.employee_id
 group by
