--- a/1141. User Activity for the Past 30 Days I.md
+++ b/1141. User Activity for the Past 30 Days I.md
@@ -84,4 +84,19 @@ SELECT activity_date AS day, COUNT(DISTINCT user_id) AS active_users
 FROM Activity
 WHERE (activity_date > "2019-06-27" AND activity_date <= "2019-07-27")
 GROUP BY activity_date;
+```   
+
+
+
 ```
+select
+    activity_date as day,count(distinct user_id) as active_users
+from
+    Activity
+where 
+    activity_date between date_add('2019-07-27', interval -29 day) and '2019-07-27'
+group by
+     activity_date   
+    
+    
+ ```
