--- a/1303. Find the Team Size.md
+++ b/1303. Find the Team Size.md
@@ -81,3 +81,13 @@ on e.team_id = c.team_id
     
 ```
 
+#### Window function approach  
+
+  
+```
+select
+    employee_id, count(employee_id) over (partition by team_id order by team_id) as team_size
+from
+    Employee
+```
+
