--- a/1350. Students With Invalid Departments.md
+++ b/1350. Students With Invalid Departments.md
@@ -106,7 +106,21 @@ Memory Usage: 0B, less than 100.00% of MySQL online submissions for Students Wit
 
 ### Approach 2
 ```
-
+select
+    s.id,s.name
+from
+    Departments d right join Students s
+on
+    d.id = s.department_id 
+where
+    d.id is null
+    
+    
 ```
+
+Success  
+Details   
+Runtime: 936 ms, faster than 54.54% of MySQL online submissions for Students With Invalid Departments.  
+Memory Usage: 0B, less than 100.00% of MySQL online submissions for Students With Invalid Departments.
 
 
